[package]
name = "news_app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.5", features = ["macros", "json"] }
fasthash = "0.4.0"
reqwest = { version = "0.12.3", features = ["json"] }
rusqlite = "0.31.0"
serde = "1.0.197"
serde_json = "1.0.115"
tokio = { version = "1.37.0", features = ["rt-multi-thread"] }
utoipa = "=4.2.0"
utoipa-swagger-ui = { version = "6.0.0", features = ["axum"] }
